--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/dropdown": "^2.1.23",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/slider": "^2.2.9",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
