--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.28",
     "@nextui-org/dropdown": "^2.1.23",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
