--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/card": "^2.0.28",
+    "@nextui-org/checkbox": "^2.0.29",
     "@nextui-org/dropdown": "^2.1.23",
     "@nextui-org/navbar": "^2.0.30",
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/slider": "^2.2.9",
+    "@nextui-org/switch": "^2.0.28",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "framer-motion": "^11.1.7",
