--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "framer-motion": "^11.1.7",
-    "next": "14.2.3",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18"
   },
